GG-467 Fix overflows.

--- a/app/styles/components/player/_gru-navigator.scss
+++ b/app/styles/components/player/_gru-navigator.scss
@@ -1,5 +1,6 @@
 .player .gru-navigator {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   height: 100%;
   background-color: $dark-400;
   .navigator-header {
